--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 
 header {
   text-align: center;
-  padding: 3rem;
+  padding: 2rem 0 1.3rem 0;
 }
 
 /* Container */
@@ -37,11 +37,11 @@ header {
   justify-content: center;
   background-color: var(--white);
   border-radius: 20px;
-  margin: 40px;
 }
 
 section {
-  padding: 2rem;
+  padding: 1rem 1.3rem;
+  margin: 1rem;
 }
 h1 {
   font-size: 1.5rem;
@@ -49,7 +49,8 @@ h1 {
 }
 
 h3 {
-  font-size: 1rem;
+  font-size: 0.7rem;
+  padding: 0.5rem 0 0.25rem 0;
 }
 
 h4 {
@@ -62,27 +63,41 @@ h5 {
   color: var(--darker-grayish-cyan);
 }
 
+input {
+  padding: 0 1rem;
+  text-align: right;
+  font-family: var(--font-family);
+  font-size: 1rem;
+  font-weight: 700;
+  color: var(--very-dark-cyan);
+  outline: none;
+}
+
+button {
+  list-style: none;
+  font-size: 1rem;
+  text-align: center;
+  font-family: var(--font-family);
+  border-radius: 5px;
+  font-weight: 700;
+  border-style: none;
+  background-color: var(--strong-cyan);
+}
 /* Amount Input */
 .input__main {
   background-color: var(--light-grayish-cyan);
   border-style: none;
   width: 100%;
-  height: 2.5rem;
+  height: 1.9rem;
   border-radius: 2px;
-  font-family: (--font-family);
-  -webkit-appearance: none;
   margin: 0;
+  margin-bottom: 1.5rem;
   -webkit-appearance: textfield;
 }
 
-button {
-  list-style: none;
-
-  text-align: center;
-  border-radius: 5px;
-  font-weight: 700;
-  border-style: none;
-  background-color: var(--strong-cyan);
+.input__main:focus {
+  /* outline: 2px solid var(--strong-cyan); */
+  outline: 2px solid var(--strong-cyan);
 }
 
 .hidden {
@@ -97,6 +112,8 @@ button {
 #tipSelect {
   display: grid;
   grid-template-columns: 50% 50%;
+  grid-gap: 17px;
+  padding-top: 0.25rem;
 }
 
 .percentSelect {
@@ -104,43 +121,67 @@ button {
   color: var(--light-grayish-cyan);
   text-align: center;
   background-color: var(--very-dark-cyan);
-  margin: 0.5rem;
-  padding: 0.5rem;
+  padding: 0.25rem;
+}
+
+.percentSelect:active {
+  background-color: var(--light-grayish-cyan);
+  color: var(--very-dark-cyan);
+}
+
+.percentSelect:focus {
+  background-color: var(--strong-cyan);
+  color: var(--very-dark-cyan);
 }
 
 .customPercent {
   color: var(--very-dark-cyan);
   background-color: var(--light-grayish-cyan);
-  margin: 0.5rem;
-  padding: 0.5rem;
+  padding: 0.25rem;
 }
 
-.active {
-  background-color: var(--strong-cyan);
-  color: var(--very-dark-cyan);
-}
-.customInput {
+#customInput {
   background-color: var(--light-grayish-cyan);
   position: relative;
-  z-index: 100;
-  margin: 0.5rem;
-  padding: 0.5rem;
   border: none;
   border-radius: 5px;
   -webkit-appearance: textfield;
+}
+
+.inputCorrect {
+  border: 2px solid green;
+}
+.input__span {
+  display: flex;
+  justify-content: space-between;
+}
+#input__message {
+  color: red;
+  font-size: 0.7rem;
+  padding: 0.5rem 0 0.25rem 0;
+}
+.inputFalse {
+  border: 2px solid red;
+}
+
+#customInput:focus {
+  outline: 2px solid var(--strong-cyan);
 }
 
 /* Result */
 .result {
   background-color: var(--very-dark-cyan);
   border-radius: 20px;
-  margin: 1.5rem;
+  margin: 1rem;
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .result__total {
   display: flex;
   justify-content: space-between;
+  padding: 1rem 0;
 }
 
 .result__total--units {
@@ -151,11 +192,22 @@ button {
 #reset {
   width: 100%;
   padding: 0.5rem;
+  margin: 0.5rem 0;
+  align-self: flex-end;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 960px) {
   .container {
     display: flex;
     flex-direction: row;
+    margin: 0 5%;
+  }
+
+  section {
+    width: 100%;
+  }
+
+  #tipSelect {
+    grid-template-columns: repeat(3, 33%);
   }
 }
