--- a/tip-calculator/src/App.css
+++ b/tip-calculator/src/App.css
@@ -33,6 +33,7 @@ header {
 .main__container {
   display: grid;
   grid-template-areas: 'calculator result';
+  border-radius: 30px;
 }
 
 .calculator {
@@ -105,6 +106,10 @@ button {
   cursor: pointer;
 }
 
+.logo {
+  margin: 3rem;
+}
+
 /* Amount Input */
 .input__main {
   background-color: var(--light-grayish-cyan);
@@ -119,6 +124,20 @@ button {
 
 .input__main:focus {
   outline: 2px solid var(--strong-cyan);
+}
+
+.input__wrapper {
+  position: relative;
+}
+
+.input__icon {
+  position: absolute;
+  top: 30%;
+  left: 20px;
+  transform: translateY(-50%);
+  fill: #bbb;
+  width: 16px;
+  height: 16px;
 }
 
 .hidden {
