--- a/tip-calculator/src/App.css
+++ b/tip-calculator/src/App.css
@@ -30,16 +30,23 @@ header {
   padding: 2rem 0 1.3rem 0;
 }
 
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .main__container {
   display: grid;
-  grid-template-areas: 'calculator result';
+  grid-template-areas: 'calculator' 'result';
   border-radius: 30px;
+  background-color: var(--white);
+  width: 100%;
 }
 
 .calculator {
   grid-area: calculator;
-  display: flex;
-  flex-direction: column;
 }
 
 .result {
@@ -72,6 +79,7 @@ h1 {
 h3 {
   font-size: 0.7rem;
   padding: 0.5rem 0 0.25rem 0;
+  color: var(--dark-grayish-cyan)
 }
 
 h4 {
@@ -114,12 +122,12 @@ button {
 .input__main {
   background-color: var(--light-grayish-cyan);
   border-style: none;
-  width: 100%;
   height: 1.9rem;
   border-radius: 2px;
   margin: 0;
   margin-bottom: 1.5rem;
   -webkit-appearance: textfield;
+  width: 100%;
 }
 
 .input__main:focus {
@@ -165,8 +173,8 @@ button {
   padding: 0.25rem;
 }
 
-.percentSelect:active {
-  background-color: var(--light-grayish-cyan);
+.percentSelect:hover {
+  background-color: var(--strong-cyan);
   color: var(--very-dark-cyan);
 }
 
@@ -179,6 +187,7 @@ button {
   color: var(--very-dark-cyan);
   background-color: var(--light-grayish-cyan);
   padding: 0.25rem;
+  width: 100%;
 }
 
 #customInput {
@@ -198,7 +207,13 @@ button {
   justify-content: space-between;
 }
 
-#input__message {
+#input__message--bill {
+  color: red;
+  font-size: 0.7rem;
+  padding: 0.5rem 0 0.25rem 0;
+}
+
+#input__message--people {
   color: red;
   font-size: 0.7rem;
   padding: 0.5rem 0 0.25rem 0;
@@ -237,8 +252,11 @@ button {
   width: 100%;
   padding: 0.5rem;
   margin: 0.5rem 0;
-  align-self: flex-end;
+  align-self: flex-end !important;
 }
+
+/* Attribution */
+.attribution {}
 
 @media (min-width: 960px) {
 
@@ -250,18 +268,15 @@ button {
   }
 
   main {
-    display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    max-width: 1000px;
   }
 
   .main__container {
     display: grid;
     grid-template-areas: 'calculator result';
-    background-color: var(--white);
-
+    width: 1000px;
+    grid-template-columns: 50% 50%;
   }
 
   .calculator {
@@ -276,7 +291,6 @@ button {
     display: flex;
     flex-direction: column;
   }
-
 
   #tipSelect {
     grid-template-columns: repeat(3, 33%);
